--- a/server/plugins/parsers/flowrate_parser.py.dist
+++ b/server/plugins/parsers/flowrate_parser.py.dist
@@ -45,15 +45,16 @@
 #    this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # =================================================================================== #
+
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -101,7 +102,8 @@ class DPTParser(OpenVDMCSVParser):
 
                     try:
                         date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
+
                         flowrate = float(line['flowrate'])
 
                     except Exception as err:
@@ -192,11 +194,10 @@ class DPTParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','flowrate']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','flowrate']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'l/min'
         visualizerDataObj['label'] = 'Flowrate'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
