--- a/server/plugins/parsers/tsg_parser.py.dist
+++ b/server/plugins/parsers/tsg_parser.py.dist
@@ -50,12 +50,12 @@
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -64,8 +64,8 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-# RAW_COLS = ['date_time','data'] # OpenRVDAS style
-RAW_COLS = ['date','time','water_temp_int','conductivity','salinity','sound_velocity','water_temp_ext'] # SCS style
+RAW_COLS = ['date_time','data'] # OpenRVDAS style
+# RAW_COLS = ['date','time','water_temp_int','conductivity','salinity','sound_velocity','water_temp_ext'] # SCS style
 PROC_COLS = ['date_time','water_temp_int','conductivity','salinity','sound_velocity','water_temp_ext']
 
 ROUNDING = {
@@ -80,8 +80,8 @@ MIN_DEPTH = 0
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class TSGParser(OpenVDMCSVParser):
@@ -107,8 +107,8 @@ class TSGParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        # date_time = line['date_time'] # OpenRVDAS style
-                        date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        date_time = line['date_time'] # OpenRVDAS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         water_temp_int = float(line['water_temp_int'].split('=')[1])
                         conductivity = float(line['conductivity'].split('=')[1])
@@ -215,32 +215,27 @@ class TSGParser(OpenVDMCSVParser):
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','water_temp_int']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'C'
         visualizerDataObj['label'] = 'Internal Water Temp'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','conductivity']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'S/m'
         visualizerDataObj['label'] = 'Conductivity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','salinity']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'PSU'
         visualizerDataObj['label'] = 'Salinity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','sound_velocity']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm/s'
         visualizerDataObj['label'] = 'Sound Velocity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','water_temp_ext']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'C'
         visualizerDataObj['label'] = 'External Water Temp'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
