--- a/server/plugins/parsers/dpt_parser.py.dist
+++ b/server/plugins/parsers/dpt_parser.py.dist
@@ -45,15 +45,16 @@
 #    this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # =================================================================================== #
+
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -104,8 +105,9 @@ class DPTParser(OpenVDMCSVParser):
 
                     try:
                         date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
-                        comp1 = float(line['depth'])
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
+
+                        depth = float(line['depth'])
 
                     except Exception as err:
                         errors.append(lineno)
@@ -204,11 +206,10 @@ class DPTParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp1']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','depth']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm'
         visualizerDataObj['label'] = 'Depth'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
