--- a/server/plugins/parsers/gnss_parser.py.dist
+++ b/server/plugins/parsers/gnss_parser.py.dist
@@ -45,6 +45,7 @@
 #    this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # =================================================================================== #
+
 import os
 import sys
 import csv
@@ -109,6 +110,7 @@ class GNSSParser(OpenVDMCSVParser):
                     try:
                         date_time = line['date_time'] # OpenRVDAS style
                         # date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        
                         heading = (self._hemisphere_correction(float(line['heading'][:3]) + float(line['heading'][3:])/60, line['EW']))
                         pitch = (self._hemisphere_correction(float(line['pitch'][:2]) + float(line['pitch'][2:])/60, line['NS']))
                         roll = int(line['roll'])
@@ -201,23 +203,20 @@ class GNSSParser(OpenVDMCSVParser):
         # split data where there are gaps
         logging.debug("Building visualization data...")
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','heading']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','heading']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Heading'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','pitch']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','pitch']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Pitch'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','roll']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','roll']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Roll'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
