--- a/server/plugins/parsers/hpr_parser.py.dist
+++ b/server/plugins/parsers/hpr_parser.py.dist
@@ -45,6 +45,7 @@
 #    this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # =================================================================================== #
+
 import os
 import sys
 import csv
@@ -53,6 +54,7 @@ import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -195,23 +197,20 @@ class HPRParser(OpenVDMCSVParser):
         # split data where there are gaps
         logging.debug("Building visualization data...")
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','heading']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','heading']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Heading'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','pitch']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','pitch']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Pitch'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','roll']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','roll']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Roll'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
