--- a/server/plugins/parsers/tsg45_parser.py.dist
+++ b/server/plugins/parsers/tsg45_parser.py.dist
@@ -49,12 +49,12 @@
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -106,7 +106,7 @@ class SBE45TSGParser(OpenVDMCSVParser):
 
                     try:
                         date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         data_temp,data_cont,data_sal,data_sv =  line['data'].split()
 
@@ -209,29 +209,25 @@ class SBE45TSGParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','water_temp']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','water_temp']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'C'
         visualizerDataObj['label'] = 'Water Temp 1'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','conductivity']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','conductivity']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'S/m'
         visualizerDataObj['label'] = 'Conductivity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','salinity']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','salinity']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'PSU'
         visualizerDataObj['label'] = 'Salinity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','sound_velocity']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','sound_velocity']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm/s'
         visualizerDataObj['label'] = 'Sound Velocity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
