--- a/server/plugins/parsers/twind_parser.py.dist
+++ b/server/plugins/parsers/twind_parser.py.dist
@@ -45,15 +45,16 @@
 #    this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # =================================================================================== #
+
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -62,8 +63,8 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-# RAW_COLS = ['date_time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # OpenRVDAS style
-RAW_COLS = ['date','time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # SCS style
+RAW_COLS = ['date_time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # OpenRVDAS style
+# RAW_COLS = ['date','time','hdr','wind_speed','wind_dir','unknown_01','unknown_02','unknown_03','unknown_04','unknown_05',] # SCS style
 PROC_COLS = ['date_time','wind_speed','wind_dir']
 
 ROUNDING = {
@@ -73,8 +74,8 @@ ROUNDING = {
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class TWindParser(OpenVDMCSVParser):
@@ -100,8 +101,8 @@ class TWindParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        # date_time = line['date_time'] # OpenRVDAS style
-                        date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        date_time = line['date_time'] # OpenRVDAS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         wind_speed = float(line['wind_speed'])
                         wind_dir = float(line['wind_dir'])
@@ -198,14 +199,12 @@ class TWindParser(OpenVDMCSVParser):
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','wind_speed']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'm/s'
         visualizerDataObj['label'] = 'Wind Speed'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         visualizerDataObj['data'] = json.loads(df_proc[['date_time','wind_dir']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'deg'
         visualizerDataObj['label'] = 'Wind Direction'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
