--- a/server/plugins/parsers/xdr_parser.py.dist
+++ b/server/plugins/parsers/xdr_parser.py.dist
@@ -48,12 +48,12 @@
 import os
 import sys
 import csv
-import copy
 import json
 import pandas as pd
 import numpy as np
 import argparse
 import logging
+from copy import deepcopy
 from datetime import datetime
 
 from os.path import dirname, realpath
@@ -104,7 +104,7 @@ class XDRParser(OpenVDMCSVParser):
 
                     try:
                         date_time = line['date_time'] # OpenRVDAS style
-                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         air_temp = float(line['air_temp'])
                         air_pres = float(line['air_pres'])
@@ -202,23 +202,20 @@ class XDRParser(OpenVDMCSVParser):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','air_temp']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','air_temp']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'C'
         visualizerDataObj['label'] = 'Air Temperature'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','air_pres']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','air_pres']].to_json(orient='values'))
         visualizerDataObj['unit'] = 'mBar'
         visualizerDataObj['label'] = 'Air Pressure'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
-        visualizerDataObj['data'] = json.loads(df_crop[['date_time','humidity']].to_json(orient='values'))
+        visualizerDataObj['data'] = json.loads(df_proc[['date_time','humidity']].to_json(orient='values'))
         visualizerDataObj['unit'] = '%'
         visualizerDataObj['label'] = 'Hummidity'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None:
@@ -268,272 +265,3 @@ if __name__ == "__main__":
         logging.error(str(err))
         raise err
         sys.exit(1)
-
-
-# =================================================================================== #
-#
-#         FILE:  met_parser.py
-#
-#        USAGE:  met_parser.py [-h] [-c] <dataFile>
-#
-#  DESCRIPTION:  Parse the supplied NMEA-formtted MET file (w/ SCS formatted timestamp)
-#                and return the json-formatted string used by OpenVDM as part of it's
-#                Data dashboard. 
-#
-#      OPTIONS:  [-h] Return the help message.
-#                <dataFile> Full or relative path of the data file to process.
-#
-# REQUIREMENTS:  python2.7, Python Modules: sys, os, argparse, json, pandas
-#
-#         BUGS:
-#        NOTES:
-#       AUTHOR:  Webb Pinner
-#      COMPANY:  Capable Solutions
-#      VERSION:  1.0
-#      CREATED:  2016-08-29
-#     REVISION:  2016-12-29
-#
-# LICENSE INFO:  Open Vessel Data Management v2.2 (OpenVDMv2)
-#                Copyright (C) 2017 OceanDataRat.org
-#
-#        NOTES:  Requires Pandas v0.18 or higher
-#
-#    This program is free software: you can redistribute it and/or modify it under the
-#    terms of the GNU General Public License as published by the Free Software
-#    Foundation, either version 3 of the License, or (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful, but WITHOUT ANY
-#    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
-#    PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License #    along with
-#    this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-# =================================================================================== #
-from __future__ import print_function
-import pandas as pd
-import numpy as np
-import json
-import argparse
-import subprocess
-import tempfile
-import sys
-import copy
-import os
-import shutil
-import csv
-from itertools import (takewhile,repeat)
-
-# visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-# statObj = {'statName':'', 'statUnit':'', 'statType':'', 'statData':[]}
-# qualityTestObj = {"testName": "", "results": ""}
-
-RAW_COLUMNS = ['date','time','hdr','C','Air_Temperature_(C)','C2','TEMP','H','Relative_Humidity_(%)','P','RH','P2','Barometer_(mBar)','mB','BARO_cksum']
-PROC_COLUMNS = ['date_time','Barometer_(mBar)','Air_Temperature_(C)','Relative_Humidity_(%)']
-CROP_COLUMNS = ['date_time','Barometer_(mBar)','Air_Temperature_(C)','Relative_Humidity_(%)']
-
-MAX_DELTA_T = pd.Timedelta('10 seconds')
-
-RESAMPLE_INTERVAL = '1T' # 1 minute
-
-DEBUG = False
-CSVKIT = False
-
-def debugPrint(*args, **kwargs):
-    if DEBUG:
-        errPrint(*args, **kwargs)
-
-def errPrint(*args, **kwargs):
-        print(*args, file=sys.stderr, **kwargs)
-
-
-def rawincount(filename):
-    f = open(filename, 'rb')
-    bufgen = takewhile(lambda x: x, (f.read(1024*1024) for _ in repeat(None)))
-    return sum( buf.count(b'\n') for buf in bufgen )
-
-def csvCleanup(filepath):
-
-    command = ['csvclean', filepath]
-    errors = 0
-
-    s = ' '
-    debugPrint(s.join(command))
-
-    proc = subprocess.Popen(command,stderr=subprocess.PIPE, stdout=subprocess.PIPE)
-    out, err = proc.communicate()
-
-    (dirname, basename) = os.path.split(filepath)
-
-    debugPrint("Dirname:" + dirname)
-    debugPrint("Basename:" + basename)
-
-    outfile = os.path.join(dirname, os.path.splitext(basename)[0] + '_out.csv')
-    errfile = os.path.join(dirname, os.path.splitext(basename)[0] + '_err.csv')
-
-    debugPrint("Outfile: " + outfile)
-    debugPrint("Errfile: " + errfile)
-
-    if os.path.isfile(errfile):
-        errors = rawincount(errfile)-1
-
-    return (errors, outfile)
-
-def parseFile(filePath):
-    output = {}
-    output['visualizerData'] = []
-    output['qualityTests'] = []
-    output['stats'] = []
-
-    tmpdir = tempfile.mkdtemp()
-
-    outfile = filePath
-    errors = 0
-
-    if CSVKIT:
-        shutil.copy(filePath, tmpdir)
-        (errors, outfile) = csvCleanup(os.path.join(tmpdir, os.path.basename(filePath)))
-        debugPrint('Error: ', errors)
-
-    rawIntoDf = {
-        'date_time':[],
-        'Barometer_(mBar)':[],
-        'Air_Temperature_(C)':[],
-        'Relative_Humidity_(%)':[],
-    }
-
-    csvfile = open(outfile, 'r')
-    reader = csv.DictReader( csvfile, RAW_COLUMNS)
-
-    for line in reader:
-
-        try:
-
-            line_date_time = line['date'] + ' ' + line['time']
-
-            line_bar = float(line['Barometer_(mBar)'])
-            line_air_temp = float(line['Air_Temperature_(C)'])
-            line_humid = float(line['Relative_Humidity_(%)'])
-
-        except:
-
-            debugPrint('Parsing error: ',line)
-            errors += 1
-
-        else:
-            rawIntoDf['date_time'].append(line_date_time)
-            rawIntoDf['Barometer_(mBar)'].append(line_bar)
-            rawIntoDf['Air_Temperature_(C)'].append(line_air_temp)
-            rawIntoDf['Relative_Humidity_(%)'].append(line_humid)
-
-    shutil.rmtree(tmpdir)
-
-    if len(rawIntoDf['date_time']) == 0:
-        return None
-
-    df_proc = pd.DataFrame(rawIntoDf)
-
-    df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], infer_datetime_format=True)
-
-    df_proc = df_proc.join(df_proc['date_time'].diff().to_frame(name='deltaT'))
-
-    rowValidityStat = {'statName':'Row Validity', 'statType':'rowValidity', 'statData':[len(df_proc), errors]}
-    output['stats'].append(rowValidityStat)
-
-    barStat = {'statName': 'Barometer Bounds','statUnit': 'mBar', 'statType':'bounds', 'statData':[round(df_proc['Barometer_(mBar)'].min(),3), round(df_proc['Barometer_(mBar)'].max(),3)]}
-    output['stats'].append(barStat)
-
-    tempStat = {'statName': 'Air Temperature Bounds','statUnit': 'C', 'statType':'bounds', 'statData':[round(df_proc['Air_Temperature_(C)'].min(),3), round(df_proc['Air_Temperature_(C)'].max(),3)]}
-    output['stats'].append(tempStat)
-
-    humidStat = {'statName': 'Humidity Bounds','statUnit': '%', 'statType':'bounds', 'statData':[round(df_proc['Relative_Humidity_(%)'].min(),3), round(df_proc['Relative_Humidity_(%)'].max(),3)]}
-    output['stats'].append(humidStat)
-
-    deltaTStat = {"statName": "Delta-T Bounds","statUnit": "seconds","statType": "bounds","statData": [round(df_proc.deltaT.min().total_seconds(),3), round(df_proc.deltaT.max().total_seconds(),3)]}
-    output['stats'].append(deltaTStat)
-
-    deltaTValidityStat = {'statName':'Temporal Validity', 'statType':'valueValidity', 'statData':[len(df_proc[(df_proc['deltaT'] <= MAX_DELTA_T)]),len(df_proc[(df_proc['deltaT'] > MAX_DELTA_T)])]}
-    output['stats'].append(deltaTValidityStat)
-
-    rowQualityTest = {"testName": "Rows", "results": "Passed"}
-    if rowValidityStat['statData'][1] > 0:
-        if rowValidityStat['statData'][1]/rowValidityStat['statData'][0] > .10:
-            rowQualityTest['results'] = "Failed"
-        else:
-            rowQualityTest['results'] = "Warning"
-    output['qualityTests'].append(rowQualityTest)
-
-    deltaTQualityTest = {"testName": "DeltaT", "results": "Passed"}
-    if deltaTValidityStat['statData'][1] > 0:
-        if deltaTValidityStat['statData'][1]/len(df_proc) > .10:
-            deltaTQualityTest['results'] = "Failed"
-        else:
-            deltaTQualityTest['results'] = "Warning"
-    output['qualityTests'].append(deltaTQualityTest)
-
-    df_crop = df_proc[CROP_COLUMNS]
-
-    df_crop = df_crop.set_index('date_time')
-
-    df_crop = df_crop.resample(RESAMPLE_INTERVAL, label='right', closed='right').mean()
-
-    df_crop = df_crop.reset_index()
-
-    decimals = pd.Series([1, 2, 1, 1, 1, 1], index=['Barometer_(mBar)','Air_Temperature_(C)','Relative_Humidity_(%)','Vector_Wind_Speed_(m/s)','Vector_Wind_Direction_(degrees, Relative to Bow)','Scalar_Wind_Speed_(m/s)'])
-    df_crop = df_crop.round(decimals)
-
-    visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-    visualizerDataObj['data'] = json.loads(df_crop[['date_time','Barometer_(mBar)']].to_json(orient='values'))
-    visualizerDataObj['unit'] = 'mBar'
-    visualizerDataObj['label'] = 'Barometer'
-    output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-
-    visualizerDataObj['data'] = json.loads(df_crop[['date_time','Air_Temperature_(C)']].to_json(orient='values'))
-    visualizerDataObj['unit'] = 'C'
-    visualizerDataObj['label'] = 'Temperature'
-    output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-
-    visualizerDataObj['data'] = json.loads(df_crop[['date_time','Relative_Humidity_(%)']].to_json(orient='values'))
-    visualizerDataObj['unit'] = '%'
-    visualizerDataObj['label'] = 'Humidity'
-    output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-
-    return output
-
-# -------------------------------------------------------------------------------------
-# Main function of the script should it be run as a stand-alone utility.
-# -------------------------------------------------------------------------------------
-def main(argv):
-
-    parser = argparse.ArgumentParser(description='Parse MET data')
-    parser.add_argument('dataFile', metavar='dataFile', help='the raw data file to process')
-    parser.add_argument('-d', '--debug', action='store_true', help=' display debug messages')
-    parser.add_argument('-c', '--csvkit', action='store_true', help=' clean datafile using CSVKit')
-
-    args = parser.parse_args()
-    if args.debug:
-        global DEBUG
-        DEBUG = True
-        debugPrint("Running in debug mode")
-
-    if args.csvkit:
-        global CSVKIT
-        CSVKIT = True
-        debugPrint("Using CSVKit to clean data file prior to processing")
-
-    if not os.path.isfile(args.dataFile):
-        sys.stderr.write('ERROR: File not found\n')
-        sys.exit(1)
-
-    jsonObj = parseFile(args.dataFile)
-    if jsonObj:
-        print(json.dumps(jsonObj))
-        sys.exit(0)
-    else:
-        sys.exit(1)
-
-# -------------------------------------------------------------------------------------
-# Required python code for running the script as a stand-alone utility
-# -------------------------------------------------------------------------------------
-if __name__ == "__main__":
-    main(sys.argv[1:])
